test/cases/compile_errors/invalid_underscore_placement_in_int_literal-2.zig
fn main() void {
    var bad: u128 = 0b0010_;
    _ = bad;
}

// error
//
// :2:27: error: trailing digit separator
